<resources>
    <string name="app_name">NestedLayouts</string>
    <string name="text1">1</string>
    <string name="text2">1</string>
    <string name="text3">1</string>
    <string name="text4"></string>
    <string name="text5"></string>
    <string name="text6"></string>
    <string name="text7"></string>
    <string name="text8"></string>
    <string name="text9"></string>
    <string name="button1">ROLL!!!</string>
</resources>